# zee

./: ROADMAP.md
docs/: dependency-breaking-updates-scope.md  dependency-breaking-updates.md  rectangle-implementation-plan.md  rectangle-mode.md  rectangle-paste-scope.md
docs/behavior/: _constraints.md  rectangle-copy.md  rectangle-cut.md  rectangle-highlight.md  rectangle-paste.md  rectangle-selection.md
openspec/changes/archive/2026-06-13-rectangle-mode/: design.md  proposal.md  tasks.md
openspec/changes/rectangle-kill-store/: design.md  proposal.md  tasks.md
openspec/changes/rectangle-kill-store/specs/rectangle-copy/: spec.md
openspec/specs/block-edit-model/: spec.md
openspec/specs/rectangle-column-mapping/: spec.md
openspec/specs/rectangle-copy/: spec.md
openspec/specs/rectangle-cut/: spec.md
openspec/specs/rectangle-highlight/: spec.md
zee/: Cargo.toml  build.rs
zee-edit/: Cargo.toml
zee-edit/src/: diff.rs  graphemes.rs  lib.rs  movement.rs  tree.rs
zee-grammar/: Cargo.toml
zee-grammar/src/: builder.rs  config.rs  git.rs
zee-highlight/: Cargo.toml
zee-highlight/src/: error.rs  lib.rs  selector.rs
zee/src/: config.rs  main.rs  rectangle_kill.rs
zee/src/components/: edit_tree_viewer.rs  splash.rs
zee/src/components/buffer/: mod.rs  status_bar.rs  textarea.rs
zee/src/components/prompt/: buffers.rs  interactive.rs  matcher.rs  mod.rs  picker.rs  status.rs
zee/src/components/theme/: mod.rs
zee/src/editor/: bindings.rs  buffer.rs  mod.rs  windows.rs
zee/src/syntax/: highlight.rs  parse.rs
(+3 files in other folders)
