[package]
name = "zee-grammar"
version = "0.4.0"
authors = ["Marius Cobzarenco <marius@reinfer.io>"]
description = "Wrappers for tree sitter grammars used by zee"
homepage = "https://github.com/zee-editor/zee"
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
anyhow = "1.0.58"
cc = { version = "1.0.73", features = ["parallel"] }
colored = "3"
dirs = "6"
include_dir = "0.7.2"
libloading = "0.9"
log = "0.4.17"
once_cell = { version = "1.13.0", features = ["parking_lot"] }
rayon = "1.5.3"
serde = "1.0.140"
serde_derive = "1.0.140"
tree-sitter = "0.20.8"
